<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="SomeLogin" />

    <ImageView
        android:id="@+id/iv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_name_48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login" />

    <TextView
        android:id="@+id/tv_content_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/iv_name"
        app:layout_constraintTop_toTopOf="@+id/iv_name"
        tools:text="Иван Иванов" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/profile_fragment_tv_name"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_name"
        app:layout_constraintStart_toEndOf="@+id/iv_name" />

    <ImageView
        android:id="@+id/iv_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_company_48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_name" />

    <TextView
        android:id="@+id/tv_content_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/iv_company"
        app:layout_constraintTop_toTopOf="@+id/iv_company"
        tools:text="Stuff inc" />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/profile_fragment_tv_company"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_company"
        app:layout_constraintStart_toEndOf="@+id/iv_company" />

    <ImageView
        android:id="@+id/iv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_location_48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_company" />

    <TextView
        android:id="@+id/tv_content_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/iv_location"
        app:layout_constraintTop_toTopOf="@+id/iv_location"
        tools:text="London" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/profile_fragment_tv_location"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_location"
        app:layout_constraintStart_toEndOf="@+id/iv_location" />

    <ImageView
        android:id="@+id/iv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_email_48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_location" />

    <TextView
        android:id="@+id/tv_content_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/iv_email"
        app:layout_constraintTop_toTopOf="@+id/iv_email"
        tools:text="vanya@yandex.ru" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/profile_fragment_tv_email"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_email"
        app:layout_constraintStart_toEndOf="@+id/iv_email" />

    <ImageView
        android:id="@+id/iv_blog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_web_48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_email" />

    <TextView
        android:id="@+id/tv_content_blog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/iv_blog"
        app:layout_constraintTop_toTopOf="@+id/iv_blog"
        tools:text="www.yandex.ru" />

    <TextView
        android:id="@+id/tv_blog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/profile_fragment_tv_site"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_blog"
        app:layout_constraintStart_toEndOf="@+id/iv_blog" />

    <ImageView
        android:id="@+id/iv_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_bio_48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_blog" />

    <TextView
        android:id="@+id/tv_content_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/iv_bio"
        app:layout_constraintTop_toTopOf="@+id/iv_bio"
        tools:text="Some text, text, text, more text. Very long, long multiline biography" />

    <TextView
        android:id="@+id/tv_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/profile_fragment_tv_biography"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/iv_bio"
        app:layout_constraintTop_toBottomOf="@id/tv_content_bio" />

</android.support.constraint.ConstraintLayout>